# property_management_database

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  client.js  docker-compose.yml  example.py  index.html  main.py  manage.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: codacy-analysis.yml
data/: .gitignore
src/property_manage_database/: asgi.py  settings.py  urls.py  wsgi.py
src/property_manage_database/app/graphql/: apps.py  schema.py
src/property_manage_database/app/payment/alipay/: admin.py  apps.py  graphql.py  models.py
src/property_manage_database/settings/: _asgi.py  _base.py  _database.py  _env.py  _graphql.py  _plugin_debug_tool.py  _plugin_doc_yasg.py  _wsgi.py  settings.py
src/property_manage_database/utils/: db.py
src/property_management_database/: asgi.py  hosts.py  main.py  routing.py  urls.py  urls_local.py  wsgi.py
src/property_management_database/app/goods/: admin.py  apps.py  models.py
src/property_management_database/app/goods/migrations/: 0001_initial.py
src/property_management_database/app/graphql/: apps.py  schema.py
src/property_management_database/app/hub/: admin.py  apps.py  models.py  urls.py
src/property_management_database/app/hub/api/: __init__.py  hub.py  hub_detail.py  hub_qr_code.py  location_tree.py  photo.py
src/property_management_database/app/hub/migrations/: 0001_initial.py  0002_hubmodel_name.py  0003_huboverviewmodel_created_time.py
src/property_management_database/app/menu/: admin.py  apps.py  models.py  urls.py  views.py
src/property_management_database/app/menu/migrations/: 0001_initial.py  0002_menumodel_category.py
src/property_management_database/app/payment/alipay/: apps.py  graphql.py  models.py  urls.py
src/property_management_database/app/rbac/: admin.py  apps.py  fields.py  forms.py  models.py  permission.py
src/property_management_database/app/rbac/admin/: __init__.py  permission.py  permission_config.py  permisson_type.py  resource_group.py  resource_group_dimension.py  role.py  role_group.py  user_group.py  user_group_dimension.py
src/property_management_database/app/rbac/frontend/: package.json
src/property_management_database/app/rbac/migrations/: 0001_initial.py  0002_loaddata.py  0003_add_perm_config.py  0004_rename_dj_permission_permissionmodel_dj_perm.py  0005_auto_20211214_2305.py  0006_resourcegroupdimensionmodel_resourcegroupmodel.py  _load_init_data.py
src/property_management_database/app/rbac/models/: __init__.py  _base.py  permission.py  permission_config.py  permission_type.py  resource_group.py  resource_group_dimension.py  role.py  role_group.py  user_group.py  (+2 more)
src/property_management_database/app/webrtc/: apps.py  routers.py  urls.py  video_trans.py  views.py
src/property_management_database/settings/: _asgi.py  _base.py  _dj_auth.py  _drf.py  _env.py  _graphql.py  _latest_load_host.py  _login_pass.py  _plugin_grapplli.py  _wsgi.py  docker_settings.py  settings.py
src/property_management_database/utils/: db.py
(+25 files in other folders)
