[project]
name = "property-manage-database"
version = "0.0.1"
description = ""
authors = [
    {name = "xxc", email = "x007007007@hotmail.com"},
]

dependencies = [
    "django>=3.2.16",
    "djangorestframework~=3.12",
    "markdown~=3.3",
    "django-filter~=21.1",
    "django-guardian~=2.4",
    "Pygments~=2.10",
    "drf-yasg[validation]~=1.20",
    "graphene-django>=3.0.0",
    "python-dateutil~=2.8",
    "django-debug-toolbar~=3.2",
    "django-cors-headers~=3.10",
    "django-admin-rangefilter~=0.8",
    "django-admin-list-filter-dropdown~=1.0",
    "django-extensions~=3.1",
    #    "aiortc~=1.2",,
    #    "django-admin-charts~=0.24",,
    "channels~=3.0",
    "channels-redis~=3.3",
    "django-mptt~=0.13",
    "pillow>=9.4.0",
    "shortuuid>=1.0.11",
    "qrcode>=7.3.1",
    "django-hosts>=5.2",
    "django-grappelli>=3.0.4",
]
requires-python = ">=3.7"
license = {text = "MIT"}

[project.urls]
homepage = "https://github.com/x007007007/property_management_database"

[tool]
[tool.pdm]

[tool.pdm.python]
use_venv = false


[pypi]
#url = "https://mirrors.aliyun.com/pypi/simple/"
url = "http://devpi.home.x007007007.info/root/pypi/+simple/"
verify_ssl = false